--- a/ShopFR/src/app/component/login/login.component.html
+++ b/ShopFR/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginGroup" (ngsubmit)="submit()">
+<form [formGroup]="loginGroup" (ngSubmit)="submit()">
     <div class="container">
         <div class="login">
             <div class="title-container">
@@ -6,18 +6,27 @@
             </div>
             <div class="input-container">
                 <div class="input">
-                    <input type="text" placeholder="username" formControlName="username">
+                    <input type="text" placeholder="username" formControlName="username"
+                    [ngStyle]="{'border': errorLogin ? '3px solid red' : ''}"
+                    [ngStyle]="{'border': validateInputControl(loginGroup, 'username') ? '3px solid red' : ''}"
+                    >
                 </div>
                 <div class="input">
-                    <input type="text" placeholder="password" formControlName="password">
+                    <input type="text" placeholder="password" formControlName="password"
+                    [ngStyle]="{'border': errorLogin ? '3px solid red' : ''}"
+                    [ngStyle]="{'border': validateInputControl(loginGroup, 'password') ? '3px solid red' : ''}"
+                    >
                 </div>
             </div>
             <div class="button-container">
-                <div class="button" type="submit">
-                    <button>Login</button>
+                <div class="button" >
+                    <button type="submit" [disabled] = "!loginGroup.valid">Login</button>
                 </div>
                 <div class="register">
-                    <p>Non sei ancora registrato? <a routerLink="/register">Registrati</a></p>
+                    <p *ngIf="!errorLogin ; else ElseBlock">Non sei ancora registrato? <a routerLink="/register">Registrati</a></p>
+                    <ng-template #ElseBlock>
+                        <p style="color:red">Credenziali errate</p>
+                    </ng-template>
                 </div>
             </div>
         </div>
